--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,19 @@
-# Percorso dello script di gestione OpenVPN
-OPENVPN_SCRIPT_PATH=/usr/local/bin/openvpn-install.sh
+# Backend API Key
+API_KEY=mysecretkey
+
+# Percorso dello script di gestione OpenVPN (esempio)
+# OPENVPN_SCRIPT_PATH=/usr/local/bin/openvpn-install.sh
+
+# --- Percorsi dei file di OpenVPN ---
+# Assicurati che il processo backend abbia i permessi per leggere questi file.
+#
+# Percorso del file index.txt di Easy-RSA, usato per elencare tutti i client.
+# INDEX_FILE_PATH=/etc/openvpn/server/easy-rsa/pki/index.txt
+#
+# Percorso del file di log dello stato di OpenVPN, usato per vedere i client connessi.
+# STATUS_LOG_PATH=/var/log/openvpn/status.log
+
+# --- Directory di output per i nuovi client ---
+# La cartella dove lo script di creazione salva i file .ovpn.
+# Assicurati che il processo backend abbia i permessi per leggere (e opzionalmente cancellare) i file in questa directory.
+# CLIENT_CONFIG_DIR=/root
