--- a/nginx/vpn-dashboard.conf
+++ b/nginx/vpn-dashboard.conf
@@ -4,11 +4,20 @@ server {
 
     server_name _; # Serve su tutti gli IP configurati
 
-    root /opt/vpn-manager/frontend/build;
-    index index.html index.htm;
+    # Nuovo root per i file PHP
+    root /opt/vpn-manager/frontend;
+    # Prioritizza index.php
+    index index.php index.html index.htm;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        # Per le applicazioni PHP, try_files è leggermente diverso
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    # Passa le richieste PHP a PHP-FPM
+    location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
+        fastcgi_pass unix:/var/run/php/php8.1-fpm.sock; # Potrebbe essere necessario modificare la versione di PHP
     }
 
     location /api {
